--- a/index.html
+++ b/index.html
@@ -9,17 +9,41 @@
 
 <header>
     <div class="logo"></div>
-    <ul class="nav-links"></ul>
+    <ul class="nav-links">
+        <a href=""><li>header link one</li></a>
+        <a href=""><li>header link two</li></a>
+        <a href=""><li>header link three</li></a>
+    </ul>
 </header>
 
 <section class="hero-intro">
-
+    <div class="hero-text">
+        <h1>Hero text!</h1>
+        <p>Some heroic description</p>
+        <button>Sign up</button>
+    </div>
+    <img src="" alt="Placeholder for image.">
 </section>
 
 <section class="key-items">
     <h2>Look at all the key items of the cool thing!</h2>
     <div class="items-container">
-        
+       <div class="item">
+            <img src="" alt="Some picture">
+            <figcaption>Some subtext for pic.</figcaption>           
+       </div>
+       <div class="item">
+            <img src="" alt="Some picture">
+            <figcaption>Some subtext for pic.</figcaption>           
+       </div>
+       <div class="item">
+            <img src="" alt="Some picture">
+            <figcaption>Some subtext for pic.</figcaption>           
+       </div>
+       <div class="item">
+            <img src="" alt="Some picture">
+            <figcaption>Some subtext for pic.</figcaption>           
+        </div>
     </div>
 </section>
 
