Some styling added.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
 
-<header>
-    <div class="logo"></div>
+<header class="header">
+    <div class="logo">
+        <a href="#">Hero Logo</a>
+    </div>
     <ul class="nav-links">
-        <a href=""><li>header link one</li></a>
-        <a href=""><li>header link two</li></a>
-        <a href=""><li>header link three</li></a>
+        <a href="#"><li>header link one</li></a>
+        <a href="#"><li>header link two</li></a>
+        <a href="#"><li>header link three</li></a>
     </ul>
 </header>
 
