Key items section and social proof section done.

--- a/index.html
+++ b/index.html
@@ -30,30 +30,42 @@
 <section class="key-items">
     <h2>Look at all the key items of the cool thing!</h2>
     <div class="items-container">
-       <div class="item">
-            <img src="" alt="Some picture">
+
+        <div class="item">
+            <div class="placeholder">
+                <!-- <img src="" alt="Some picture"> -->
+            </div>
             <figcaption>Some subtext for pic.</figcaption>           
        </div>
+
        <div class="item">
-            <img src="" alt="Some picture">
+            <div class="placeholder">
+                <!-- <img src="" alt="Some picture"> -->
+            </div>
+            <figcaption>Some subtext for pic.</figcaption> 
+        </div>
+        <div class="item">
+            <div class="placeholder">
+                <!-- <img src="" alt="Some picture"> -->
+            </div>
             <figcaption>Some subtext for pic.</figcaption>           
        </div>
+
        <div class="item">
-            <img src="" alt="Some picture">
-            <figcaption>Some subtext for pic.</figcaption>           
-       </div>
-       <div class="item">
-            <img src="" alt="Some picture">
-            <figcaption>Some subtext for pic.</figcaption>           
+            <div class="placeholder">
+                <!-- <img src="" alt="Some picture"> -->
+            </div>
+            <figcaption>Some subtext for pic.</figcaption> 
         </div>
     </div>
+
 </section>
 
 <secion class="social-proof">
     <blockquote>
         <p>Yeah, the thing this guys are promoting is pretty good. I like it a lot. I will even share with my friends and family to support the cool thing.</p>
     </blockquote>
-    <p>-Pier Reviewer, The Opinion Giver</p>
+    <p class="author">-Pier Reviewer, The Opinion Giver</p>
 </secion>
 
 <section class="action-call">
