Some minor edits

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 </section>
 
 <footer>
-    <p>Copyright © The Odin Project</p>
+    <p>Made by <a href="https://github.com/al-ptk">Alan Patrick</a>.</p>
+    <p>Layout from <a href="https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/landing-page">The Odin Project</a>.</p>
 </footer>
 
 </body>
