--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <section class="hero-intro">
     <div class="hero-text">
-        <h1>Hero text!</h1>
+        <h1>Some cool text!</h1>
         <p>Some heroic description</p>
         <button>Sign up</button>
     </div>
